Support local scope in CRUD operations over process instance variables #257
1. Add "Local" checkbox to VariableInstanceDataDetail. It is hidden if:
   - no activity is selected in the activity instance tree or root item (process instance) is selected
   - View is opened from Start process dialog
   - View is opened from Complete user task dialog
2. If "Local" flag is set, then a process variable is saved to the execution which the activity instance relates to.

3.  For existing variable: the Local flag is read-only. Value is set as true if execution which the variable relates to is not equal to the process instance id.