@@ -6,9 +6,11 @@
 package io.flowset.control.ui_autotest.processinstance.detail.tab.runtime;
 
 import io.flowset.control.test_support.camunda7.AbstractCamunda7UiTest;
+import io.flowset.control.test_support.camunda7.CamundaRestTestHelper;
 import io.flowset.control.test_support.camunda7.CamundaSampleDataManager;
 import io.flowset.control.test_support.camunda7.dto.request.StartProcessDto;
 import io.flowset.control.test_support.camunda7.dto.request.VariableValueDto;
+import io.flowset.control.test_support.camunda7.dto.response.ExecutionDto;
 import io.flowset.control.test_support.engine.external.ExternalEngine;
 import io.flowset.control.test_support.engine.external.RunningExternalEngine;
 import io.flowset.control.test_support.engine.external.WithRunningExternalEngine;
@@ -38,6 +40,9 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
     @Autowired
     ApplicationContext applicationContext;
 
+    @Autowired
+    CamundaRestTestHelper camundaRestTestHelper;
+
     @Test
     @DisplayName("Create action availability on Variables tab")
     void givenExistingProcessInstance_whenOpenDetailView_thenVariablesCreateActionAvailable() {
@@ -47,7 +52,7 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
                 .startByKey("testUpdateVariable", StartProcessDto.builder()
                         .variable("firstVariable", new VariableValueDto("String", "Some value"))
                         .build());
-        String instanceId = dataManager.getStartedInstances("testUpdateVariable").get(0);
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
 
         MainView mainView = loginAsAdmin();
 
@@ -77,7 +82,7 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
                         .variable("firstVariable", new VariableValueDto("String", "Some value"))
                         .build());
 
-        String instanceId = dataManager.getStartedInstances("testUpdateVariable").get(0);
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
 
         MainView mainView = loginAsAdmin();
 
@@ -108,7 +113,7 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
                         .variable("firstVariable", new VariableValueDto("String", "Some value"))
                         .build());
 
-        String instanceId = dataManager.getStartedInstances("testUpdateVariable").get(0);
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
 
         MainView mainView = loginAsAdmin();
 
@@ -138,7 +143,7 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
                 .startByKey("testUpdateVariable", StartProcessDto.builder()
                         .variable("firstVariable", new VariableValueDto("String", "Some value"))
                         .build());
-        String instanceId = dataManager.getStartedInstances("testUpdateVariable").get(0);
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
 
         MainView mainView = loginAsAdmin();
 
@@ -178,7 +183,7 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
                 .startByKey("testUpdateVariable", StartProcessDto.builder()
                         .variable("firstVariable", new VariableValueDto("String", "Some value"))
                         .build());
-        String instanceId = dataManager.getStartedInstances("testUpdateVariable").get(0);
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
 
         MainView mainView = loginAsAdmin();
 
@@ -204,7 +209,7 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
                 .startByKey("testUpdateVariable", StartProcessDto.builder()
                         .variable("firstVariable", new VariableValueDto("String", "Some value"))
                         .build());
-        String instanceId = dataManager.getStartedInstances("testUpdateVariable").get(0);
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
 
         MainView mainView = loginAsAdmin();
 
@@ -230,7 +235,7 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
                 .startByKey("testUpdateVariable", StartProcessDto.builder()
                         .variable("firstVariable", new VariableValueDto("String", "Some value"))
                         .build());
-        String instanceId = dataManager.getStartedInstances("testUpdateVariable").get(0);
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
 
         MainView mainView = loginAsAdmin();
 
@@ -259,7 +264,7 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
         CamundaSampleDataManager dataManager = applicationContext.getBean(CamundaSampleDataManager.class, camunda7)
                 .deploy("test_support/testUpdateVariable.bpmn")
                 .startByKey("testUpdateVariable");
-        String instanceId = dataManager.getStartedInstances("testUpdateVariable").get(0);
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
 
         MainView mainView = loginAsAdmin();
 
@@ -301,7 +306,7 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
                 .startByKey("testUpdateVariable", StartProcessDto.builder()
                         .variable("firstVariable", new VariableValueDto("String", "Some value"))
                         .build());
-        String instanceId = dataManager.getStartedInstances("testUpdateVariable").get(0);
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
 
         MainView mainView = loginAsAdmin();
 
@@ -335,7 +340,7 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
                 .startByKey("testUpdateVariable", StartProcessDto.builder()
                         .variable("firstVariable", new VariableValueDto("String", "Some value"))
                         .build());
-        String instanceId = dataManager.getStartedInstances("testUpdateVariable").get(0);
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
 
         MainView mainView = loginAsAdmin();
 
@@ -357,5 +362,255 @@ public class RuntimeVariablesTabActionsUiTest extends AbstractCamunda7UiTest {
         variablesTab.getRuntimeVariablesGrid()
                 .shouldHave(visibleBodyRowCount(1))
                 .shouldHave(anyBodyRowHaveCellElementText(NAME_COLUMN_INDEX, NAME_BUTTON_BY, "firstVariable"));
+    }
+
+    @Test
+    @DisplayName("Edit action: variable value is updated in data grid after confirmation")
+    void givenExistingProcessVariable_whenNameLinkClickedAndEditConfirmed_thenValueUpdatedInGrid() {
+        // given
+        CamundaSampleDataManager dataManager = applicationContext.getBean(CamundaSampleDataManager.class, camunda7)
+                .deploy("test_support/testUpdateVariable.bpmn")
+                .startByKey("testUpdateVariable", StartProcessDto.builder()
+                        .variable("firstVariable", new VariableValueDto("String", "Some value"))
+                        .build());
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
+
+        MainView mainView = loginAsAdmin();
+
+        // when
+        RuntimeVariablesTabFragment variablesTab = mainView.openProcessInstanceListView()
+                .openDetailViewByInstanceId(instanceId)
+                .openRuntimeVariablesTab();
+
+        variablesTab.getRowByVariableName("firstVariable")
+                .getCellByIndex(NAME_COLUMN_INDEX)
+                .getCellContent()
+                .find(NAME_BUTTON_BY).click();
+
+        VariableInstanceDataDetailDialog dialog = $j(VariableInstanceDataDetailDialog.class)
+                .exists()
+                .displayed();
+        dialog.getValueComponentAs(TextField.class)
+                .shouldBe(VISIBLE)
+                .setValue("Updated value");
+        dialog.getSaveBtn().click();
+
+        dialog.shouldNotBe(VISIBLE);
+
+        // then
+        variablesTab.getRowByVariableName("firstVariable")
+                .getCellByIndex(VALUE_COLUMN_INDEX)
+                .getCellContent()
+                .shouldHave(text("Updated value"));
+    }
+
+    @Test
+    @DisplayName("Edit action: variable value is not changed in data grid after cancellation")
+    void givenExistingProcessVariable_whenNameLinkClickedAndEditCancelled_thenValueNotChangedInGrid() {
+        // given
+        CamundaSampleDataManager dataManager = applicationContext.getBean(CamundaSampleDataManager.class, camunda7)
+                .deploy("test_support/testUpdateVariable.bpmn")
+                .startByKey("testUpdateVariable", StartProcessDto.builder()
+                        .variable("firstVariable", new VariableValueDto("String", "Some value"))
+                        .build());
+        String instanceId = dataManager.getStartedInstances("testUpdateVariable").getFirst();
+
+        MainView mainView = loginAsAdmin();
+
+        // when
+        RuntimeVariablesTabFragment variablesTab = mainView.openProcessInstanceListView()
+                .openDetailViewByInstanceId(instanceId)
+                .openRuntimeVariablesTab();
+
+        variablesTab.getRowByVariableName("firstVariable")
+                .getCellByIndex(NAME_COLUMN_INDEX)
+                .getCellContent()
+                .find(NAME_BUTTON_BY).click();
+
+        VariableInstanceDataDetailDialog dialog = $j(VariableInstanceDataDetailDialog.class)
+                .exists()
+                .displayed();
+        dialog.getValueComponentAs(TextField.class)
+                .shouldBe(VISIBLE)
+                .setValue("Updated value");
+        dialog.getCloseBtn().click();
+
+        dialog.shouldNotBe(VISIBLE);
+
+        // then
+        variablesTab.getRowByVariableName("firstVariable")
+                .getCellByIndex(VALUE_COLUMN_INDEX)
+                .getCellContent()
+                .shouldHave(text("Some value"));
+    }
+
+    @Test
+    @DisplayName("Scope column shows the process instance for a global variable")
+    void givenGlobalVariable_whenRuntimeVariablesTabOpened_thenScopeColumnShowsProcessInstanceName() {
+        // given
+        CamundaSampleDataManager dataManager = applicationContext.getBean(CamundaSampleDataManager.class, camunda7)
+                .deploy("test_support/testLocalVariableSubProcess.bpmn")
+                .startByKey("testLocalVariableSubProcess", StartProcessDto.builder()
+                        .variable("globalVariable", new VariableValueDto("String", "globalValue"))
+                        .build());
+        String instanceId = dataManager.getStartedInstances("testLocalVariableSubProcess").getFirst();
+
+        MainView mainView = loginAsAdmin();
+
+        // when
+        RuntimeVariablesTabFragment variablesTab = mainView.openProcessInstanceListView()
+                .openDetailViewByInstanceId(instanceId)
+                .openRuntimeVariablesTab();
+
+        // then
+        variablesTab.getRowByVariableName("globalVariable")
+                .getCellByIndex(SCOPE_COLUMN_INDEX)
+                .getCellContent()
+                .shouldHave(text("Process instance (Test local variable subprocess)"));
+    }
+
+    @Test
+    @DisplayName("Scope column shows the activity name for a local variable")
+    void givenLocalVariableInSubProcess_whenRuntimeVariablesTabOpened_thenScopeColumnShowsActivityName() {
+        // given
+        CamundaSampleDataManager dataManager = applicationContext.getBean(CamundaSampleDataManager.class, camunda7)
+                .deploy("test_support/testLocalVariableSubProcess.bpmn")
+                .startByKey("testLocalVariableSubProcess");
+        String instanceId = dataManager.getStartedInstances("testLocalVariableSubProcess").getFirst();
+
+        camundaRestTestHelper.putLocalExecutionVariable(camunda7, findSubProcessExecutionId(instanceId),
+                "localVariable", new VariableValueDto("String", "localValue"));
+
+        MainView mainView = loginAsAdmin();
+
+        // when
+        RuntimeVariablesTabFragment variablesTab = mainView.openProcessInstanceListView()
+                .openDetailViewByInstanceId(instanceId)
+                .openRuntimeVariablesTab();
+
+        // then
+        variablesTab.getRowByVariableName("localVariable")
+                .getCellByIndex(SCOPE_COLUMN_INDEX)
+                .getCellContent()
+                .shouldHave(text("Sub process"));
+    }
+
+    @Test
+    @DisplayName("Remove action: only the local variable is removed from data grid after confirmation")
+    void givenLocalVariableSelected_whenRemoveConfirmed_thenOnlyLocalVariableRemoved() {
+        // given
+        CamundaSampleDataManager dataManager = applicationContext.getBean(CamundaSampleDataManager.class, camunda7)
+                .deploy("test_support/testLocalVariableSubProcess.bpmn")
+                .startByKey("testLocalVariableSubProcess", StartProcessDto.builder()
+                        .variable("globalVariable", new VariableValueDto("String", "globalValue"))
+                        .build());
+        String instanceId = dataManager.getStartedInstances("testLocalVariableSubProcess").getFirst();
+
+        camundaRestTestHelper.putLocalExecutionVariable(camunda7, findSubProcessExecutionId(instanceId),
+                "localVariable", new VariableValueDto("String", "localValue"));
+
+        MainView mainView = loginAsAdmin();
+
+        // when
+        RuntimeVariablesTabFragment variablesTab = mainView.openProcessInstanceListView()
+                .openDetailViewByInstanceId(instanceId)
+                .openRuntimeVariablesTab();
+
+        variablesTab.selectRowByVariableName("localVariable");
+        variablesTab.getRemoveButton().click();
+
+        JmixDialog dialog = $j(JmixDialog.class, JmixDialog.OVERLAY)
+                .exists()
+                .displayed();
+        dialog.getOkBtn().click();
+
+        dialog.shouldNotBe(VISIBLE);
+
+        // then
+        variablesTab.getRuntimeVariablesGrid()
+                .shouldHave(visibleBodyRowCount(1))
+                .shouldHave(anyBodyRowHaveCellElementText(NAME_COLUMN_INDEX, NAME_BUTTON_BY, "globalVariable"));
+    }
+
+    @Test
+    @DisplayName("Remove action: variables of different scopes are removed from data grid after confirmation")
+    void givenLocalAndGlobalVariablesSelected_whenRemoveConfirmed_thenBothRemoved() {
+        // given
+        CamundaSampleDataManager dataManager = applicationContext.getBean(CamundaSampleDataManager.class, camunda7)
+                .deploy("test_support/testLocalVariableSubProcess.bpmn")
+                .startByKey("testLocalVariableSubProcess", StartProcessDto.builder()
+                        .variable("globalVariable", new VariableValueDto("String", "globalValue"))
+                        .build());
+        String instanceId = dataManager.getStartedInstances("testLocalVariableSubProcess").getFirst();
+
+        camundaRestTestHelper.putLocalExecutionVariable(camunda7, findSubProcessExecutionId(instanceId),
+                "localVariable", new VariableValueDto("String", "localValue"));
+
+        MainView mainView = loginAsAdmin();
+
+        // when
+        RuntimeVariablesTabFragment variablesTab = mainView.openProcessInstanceListView()
+                .openDetailViewByInstanceId(instanceId)
+                .openRuntimeVariablesTab();
+
+        variablesTab.selectRowByVariableName("globalVariable");
+        variablesTab.selectRowByVariableName("localVariable");
+        variablesTab.getRemoveButton().click();
+
+        JmixDialog dialog = $j(JmixDialog.class, JmixDialog.OVERLAY)
+                .exists()
+                .displayed();
+        dialog.getOkBtn().click();
+
+        dialog.shouldNotBe(VISIBLE);
+
+        // then
+        variablesTab.getRuntimeVariablesGrid()
+                .shouldBe(emptyGrid);
+    }
+
+    @Test
+    @DisplayName("Remove action: local variable is not removed from data grid after cancellation")
+    void givenLocalVariableSelected_whenRemoveCancelled_thenVariableRemainsInGrid() {
+        // given
+        CamundaSampleDataManager dataManager = applicationContext.getBean(CamundaSampleDataManager.class, camunda7)
+                .deploy("test_support/testLocalVariableSubProcess.bpmn")
+                .startByKey("testLocalVariableSubProcess");
+        String instanceId = dataManager.getStartedInstances("testLocalVariableSubProcess").getFirst();
+
+        camundaRestTestHelper.putLocalExecutionVariable(camunda7, findSubProcessExecutionId(instanceId),
+                "localVariable", new VariableValueDto("String", "localValue"));
+
+        MainView mainView = loginAsAdmin();
+
+        // when
+        RuntimeVariablesTabFragment variablesTab = mainView.openProcessInstanceListView()
+                .openDetailViewByInstanceId(instanceId)
+                .openRuntimeVariablesTab();
+
+        variablesTab.selectRowByVariableName("localVariable");
+        variablesTab.getRemoveButton().click();
+
+        JmixDialog dialog = $j(JmixDialog.class, JmixDialog.OVERLAY)
+                .exists()
+                .displayed();
+        dialog.getCancelBtn().click();
+
+        dialog.shouldNotBe(VISIBLE);
+
+        // then
+        variablesTab.getRowByVariableName("localVariable")
+                .getCellByIndex(SCOPE_COLUMN_INDEX)
+                .getCellContent()
+                .shouldHave(text("Sub process"));
+    }
+
+    String findSubProcessExecutionId(String processInstanceId) {
+        return camundaRestTestHelper.findExecutions(camunda7, processInstanceId)
+                .stream()
+                .map(ExecutionDto::getId)
+                .filter(executionId -> !executionId.equals(processInstanceId))
+                .findFirst()
+                .orElseThrow(() -> new IllegalStateException("No child execution found for " + processInstanceId));
     }
 }
